--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Projeto do https://curso.dev para clonar o https://tabnews.com.br, com o intuito de aprender conceitos de programação.",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev",
+    "dev": "npm run services:up && next dev",
+    "services:up": "docker-compose -f infra/compose.yaml up -d",
+    "services:stop": "docker-compose -f infra/compose.yaml stop",
+    "services:down": "docker-compose -f infra/compose.yaml down",
     "lint:check": "prettier --check .",
     "lint:fix": "prettier --write .",
     "test": "jest",
