--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "services:down": "docker compose -f infra/compose.yaml down",
     "lint:prettier:check": "prettier --check .",
     "lint:prettier:fix": "prettier --write .",
+    "lint:eslint:check": "eslint .",
+    "lint:eslint:fix": "eslint --fix .",
     "test": "npm run services:up && concurrently -n next,jest --hide next -k -s command-jest \"next dev\" \"jest --runInBand\"",
     "test:watch": "jest --watchAll --runInBand",
     "migration:create": "node-pg-migrate --migrations-dir infra/migrations create",
@@ -30,6 +32,7 @@
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
+    "eslint": "^9.11.1",
     "jest": "^29.6.2",
     "prettier": "^3.0.3"
   }
